tests/baselines/reference/optionalChainWithInstantiationExpression1(target=es2020).errors.txt
tests/cases/compiler/optionalChainWithInstantiationExpression1.ts(12,9): error TS1005: ';' expected.
tests/cases/compiler/optionalChainWithInstantiationExpression1.ts(12,9): error TS2304: Cannot find name 'd'.


==== tests/cases/compiler/optionalChainWithInstantiationExpression1.ts (2 errors) ====
    declare namespace A {
        export class b<T> {
            static d: number;
            constructor(x: T);
        }
    }
    
    type c = unknown;
    
    declare const a: typeof A | undefined;
    
    a?.b<c>.d;
            ~
!!! error TS1005: ';' expected.
            ~
!!! error TS2304: Cannot find name 'd'.
    
    a?.b.d
    